hyperstack-macros/tests/ui/validation_errors/invalid_idl_literal.rs
use hyperstack_macros::hyperstack;

#[hyperstack(idl = true)]
mod broken {}

fn main() {}
